GetMealData 핸들러 완성 Close #3
1. 잘못된 함수 인수에 대한 에러코드 추가
2. getMealDateWithWeekNum을 getMealDataWithWeekday와 getMealWithTime으로
   분리
3. GetMealData 핸들러 완성

branch: feature/meal
